[package]
name = "sp-daemon"
version = "0.1.0"
edition = "2021"
description = "Shannon Prime L3 HTTP/SSE daemon — wraps the frozen L1 C ABI in a long-lived process (lat-phase-2-l3-core)"

[[bin]]
name = "sp-daemon"
path = "src/main.rs"

[lib]
name = "sp_daemon"
path = "src/lib.rs"

[[bin]]
name = "sp-console"
path = "src/bin/sp_console.rs"

[[bin]]
name = "spec_validate"
path = "src/bin/spec_validate.rs"

# §4-MeMo Sprint M.1 — dual-load budget audit + concurrent invoke smoke
[[bin]]
name = "sp_memo_m1_smoke"
path = "src/bin/sp_memo_m1_smoke.rs"

[dependencies]
axum        = { version = "0.7", features = ["macros", "ws"] }
tokio       = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tower-http  = { version = "0.5", features = ["trace", "fs", "cors"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }
tokenizers      = "0.21"
ahash           = "0.8"
ed25519-dalek   = { version = "2", features = ["rand_core"] }
rand            = "0.8"
# §4-MeMo Sprint M.2 — SHA-256 for the per-turn Spinor receipt input/output
# hashes. Already in the dependency graph transitively via ed25519-dalek;
# direct registration here keeps `dialogue.rs` independent of that
# transitive path (resilient to future ed25519-dalek refactors).
sha2            = "0.10"
quinn   = { version = "0.11", features = ["rustls"] }
rustls  = { version = "0.23", default-features = false, features = ["ring"] }
rcgen   = { version = "0.13", default-features = false, features = ["ring"] }
dashmap = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# §3-HX Sprint A: dynamic FastRPC bridge (libcdsprpc.so on the device).
# Android-only — host x86 builds skip the dsp_rpc module via cfg.
[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"

[build-dependencies]
bindgen = "0.70"
