[package]
name = "sp-daemon"
version = "0.1.0"
edition = "2021"
description = "Shannon Prime L3 HTTP/SSE daemon — wraps the frozen L1 C ABI in a long-lived process (lat-phase-2-l3-core)"

[[bin]]
name = "sp-daemon"
path = "src/main.rs"

[lib]
name = "sp_daemon"
path = "src/lib.rs"

[[bin]]
name = "sp-console"
path = "src/bin/sp_console.rs"

[[bin]]
name = "spec_validate"
path = "src/bin/spec_validate.rs"

# §4-MeMo Sprint M.1 — dual-load budget audit + concurrent invoke smoke
[[bin]]
name = "sp_memo_m1_smoke"
path = "src/bin/sp_memo_m1_smoke.rs"

# §4-MeMo Sprint M.2 — zero-copy dialogue loop (Grounding -> Entity ID ->
# Synthesis) + Spinor receipt envelope smoke
[[bin]]
name = "sp_memo_m2_dialogue_smoke"
path = "src/bin/sp_memo_m2_dialogue_smoke.rs"

# §4-MeMo Sprint M.5 — KSTE-routed sparse Memory activation smoke
[[bin]]
name = "sp_memo_m5_routing_smoke"
path = "src/bin/sp_memo_m5_routing_smoke.rs"

# §4-MeMo Sprint M.4 — pouw ledger smoke (append + read + replay-determinism
# + cross-device replay simulation). Host-buildable; android binary runs on
# Knack's S22U via adb push.
[[bin]]
name = "sp_memo_m4_ledger_smoke"
path = "src/bin/sp_memo_m4_ledger_smoke.rs"

# Chat-integration — MeMo dialogue endpoint smoke harness for POST /v1/dialogue
[[bin]]
name = "sp_chat_dialogue_smoke"
path = "src/bin/sp_chat_dialogue_smoke.rs"

# §4-mesh-canonical-order — u16 rank in _reserved[0..2] + Ledger
# canonical_sort + replay_canonical_into; cross-device byte-identity
# smoke harness. Three gates (T_MESH_RANK_PROTOCOL,
# T_MESH_CANONICAL_SORT_DETERMINISTIC, T_MESH_CROSS_DEVICE_BYTE_IDENTITY).
[[bin]]
name = "sp_memo_m4_canonical_replay_smoke"
path = "src/bin/sp_memo_m4_canonical_replay_smoke.rs"

# Sprint ledger-autowire — /v1/dialogue + PoUW ledger autowire smoke harness
[[bin]]
name = "sp_chat_ledger_autowire_smoke"
path = "src/bin/sp_chat_ledger_autowire_smoke.rs"

# §4-NTT Sprint NTT.5c — forward.c activation smoke. Loads the Memory model,
# creates a session with optional Hex compute backend, runs prefill with
# SP_ENGINE_NTT_ATTN=1, validates SP_OK + dispatch-counter > 0 when
# SP_ENGINE_NTT_ATTN_HEX=1 is also set. Android-only on Knack's S22U; host
# stub prints "android-only".
[[bin]]
name = "sp_ntt_5c_forward_smoke"
path = "src/bin/sp_ntt_5c_forward_smoke.rs"

# §4-NTT Sprint NTT-bench — tokens/sec measurement on S22U. Per-cell harness
# invoked 6 times (2 models × 3 configs) by ntt_bench_toks_run.ps1; emits
# JSON line per cell with prefill_toks_per_sec + decode_toks_per_sec across
# 3 reps. Host stub prints "android-only".
[[bin]]
name = "sp_ntt_bench_toks"
path = "src/bin/sp_ntt_bench_toks.rs"

[dependencies]
axum        = { version = "0.7", features = ["macros", "ws"] }
tokio       = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tower-http  = { version = "0.5", features = ["trace", "fs", "cors"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }
tokenizers      = "0.21"
ahash           = "0.8"
ed25519-dalek   = { version = "2", features = ["rand_core"] }
rand            = "0.8"
# §4-MeMo Sprint M.2 — SHA-256 for the per-turn Spinor receipt input/output
# hashes. Already in the dependency graph transitively via ed25519-dalek;
# direct registration here keeps `dialogue.rs` independent of that
# transitive path (resilient to future ed25519-dalek refactors).
sha2            = "0.10"
quinn   = { version = "0.11", features = ["rustls"] }
rustls  = { version = "0.23", default-features = false, features = ["ring"] }
rcgen   = { version = "0.13", default-features = false, features = ["ring"] }
dashmap = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# §3-HX Sprint A: dynamic FastRPC bridge (libcdsprpc.so on the device).
# Android-only — host x86 builds skip the dsp_rpc module via cfg.
[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"

[build-dependencies]
bindgen = "0.70"

# ── Sprint WIRE-HEX features ────────────────────────────────────────────────
# `wire_hex_backend`: links libsp_hex_daemon_backend.a (built by
#   tools/sp_daemon/build-android-hex-backend.bat) and compiles the
#   `hex_forward_dispatch` module. Off by default — the daemon binary stays
#   identical to pre-WIRE-HEX when this feature is unset. Turn ON via
#   `cargo build --features wire_hex_backend` after running the bat.
#
# `wire_vulkan_backend` (Sprint WIRE-VULKAN, host-side): links
#   libsp_vulkan_daemon_backend.{a,lib} (built by
#   tools/sp_daemon/build-host-vulkan-backend.bat) and compiles the
#   `vulkan_forward_dispatch` module. Off by default. Activates the
#   gemma3_forward_vulkan / qwen3_forward_vulkan whole-forward dispatchers
#   when SP_DAEMON_BACKEND=vulkan is set at daemon startup. Symmetric to
#   wire_hex_backend (Hexagon V69 cDSP, android-only) but Vulkan is host
#   GPU compute — Windows / Linux / macOS where vulkan-1.{dll,so} resolves.
[features]
default = []
wire_hex_backend = []
wire_vulkan_backend = []
