[package]
name = "sp-dsp-smoke"
version = "0.1.0"
edition = "2021"
description = "§3-HX Sprint A smoke test for the FastRpcSession bridge. Cross-compiles for aarch64-linux-android and runs against the echo skel on the device."

[[bin]]
name = "test_dsp_rpc"
path = "src/main.rs"

# §3-HX Sprint C — minimal axum server binding FastRpcSession + DmaBuffer
# to POST /v1/dsp/echo on aarch64-android.  Verified end-to-end on device
# via `adb forward tcp:8081 tcp:8081 + curl`.
[[bin]]
name = "dsp_axum_server"
path = "src/axum_server.rs"

# §3-HX Sprint D — HVX-vectorized i16 scale via sp_compute_skel.
# Verifies bitwise correctness vs scalar reference; objdump confirms HVX SASS.
[[bin]]
name = "test_hvx"
path = "src/test_hvx.rs"

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"
axum       = "0.7"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
bytes      = "1"
