[package]
name = "sp-dsp-smoke"
version = "0.1.0"
edition = "2021"
description = "§3-HX Sprint A smoke test for the FastRpcSession bridge. Cross-compiles for aarch64-linux-android and runs against the echo skel on the device."

[[bin]]
name = "test_dsp_rpc"
path = "src/main.rs"

# §3-HX Sprint C — minimal axum server binding FastRpcSession + DmaBuffer
# to POST /v1/dsp/echo on aarch64-android.  Verified end-to-end on device
# via `adb forward tcp:8081 tcp:8081 + curl`.
[[bin]]
name = "dsp_axum_server"
path = "src/axum_server.rs"

# §3-HX Sprint D — HVX-vectorized i16 scale via sp_compute_skel.
# Verifies bitwise correctness vs scalar reference; objdump confirms HVX SASS.
[[bin]]
name = "test_hvx"
path = "src/test_hvx.rs"

# §3-HX Sprint I — single-layer FFN W_gate matmul smoke.
# Loads ONE 128×128 Q8 tile from build-cpu/tests/qwen3_rt.sp-model, runs
# through the Sprint G ffn_2stage_diag_halide kernel (Sprint H IDL method 9)
# at q_bits=14, verifies bitwise vs inline scalar reference across 3
# activation patterns + 100-iter leak gate.
[[bin]]
name = "sp_model_layer_smoke"
path = "src/sp_model_layer_smoke.rs"

# §3-HX Sprint J (Path A1) — full-model load + KV cache + layer-N bitwise.
# Loads all 28 layers + globals into per-tensor DmaBuffers; allocates KV cache
# at ctx=4096; runs Sprint H diag-method bitwise gate on layer 14's W_gate
# (catches per-layer offset arithmetic bugs the layer-0 case might mask).
# T_APPSTATE_INTEGRATION deferred to Sprint J.5 (sp_daemon cross-compile
# blocker — see lattice closure for the explicit deferral rationale).
[[bin]]
name = "sp_full_load_smoke"
path = "src/sp_full_load_smoke.rs"

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"
axum       = "0.7"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
bytes      = "1"
