[package]
name = "sp-dsp-smoke"
version = "0.1.0"
edition = "2021"
description = "§3-HX Sprint A smoke test for the FastRpcSession bridge. Cross-compiles for aarch64-linux-android and runs against the echo skel on the device."

[[bin]]
name = "test_dsp_rpc"
path = "src/main.rs"

# §3-HX Sprint C — minimal axum server binding FastRpcSession + DmaBuffer
# to POST /v1/dsp/echo on aarch64-android.  Verified end-to-end on device
# via `adb forward tcp:8081 tcp:8081 + curl`.
[[bin]]
name = "dsp_axum_server"
path = "src/axum_server.rs"

# §3-HX Sprint D — HVX-vectorized i16 scale via sp_compute_skel.
# Verifies bitwise correctness vs scalar reference; objdump confirms HVX SASS.
[[bin]]
name = "test_hvx"
path = "src/test_hvx.rs"

# §3-HX Sprint I — single-layer FFN W_gate matmul smoke.
# Loads ONE 128×128 Q8 tile from build-cpu/tests/qwen3_rt.sp-model, runs
# through the Sprint G ffn_2stage_diag_halide kernel (Sprint H IDL method 9)
# at q_bits=14, verifies bitwise vs inline scalar reference across 3
# activation patterns + 100-iter leak gate.
[[bin]]
name = "sp_model_layer_smoke"
path = "src/sp_model_layer_smoke.rs"

# §3-HX Sprint J (Path A1) — full-model load + KV cache + layer-N bitwise.
# Loads all 28 layers + globals into per-tensor DmaBuffers; allocates KV cache
# at ctx=4096; runs Sprint H diag-method bitwise gate on layer 14's W_gate
# (catches per-layer offset arithmetic bugs the layer-0 case might mask).
# T_APPSTATE_INTEGRATION deferred to Sprint J.5 (sp_daemon cross-compile
# blocker — see lattice closure for the explicit deferral rationale).
[[bin]]
name = "sp_full_load_smoke"
path = "src/sp_full_load_smoke.rs"

# §3-HX Sprint K v0.alpha — dispatch-parallelism premise smoke.
# Arc<FastRpcSession> shared across 2 ARM threads each calling Sprint H
# diag method 9 concurrently.  Measures ARM-side overlap fraction; decision
# rule: ≥ 0.5 → K v0.beta authorized; < 0.5 → pivot to K.2 (NPU/Mode B/D).
[[bin]]
name = "sp_dual_dispatch_smoke"
path = "src/sp_dual_dispatch_smoke.rs"

# §3-HX Sprint K v0.beta Stage 2.5a — scalar Barrett oracle gate.
# Drives ~1024 (a, b) test vectors per prime through skel-side scalar
# Barrett (sp_compute_barrett_oracle method 10, mode=0); per-element
# bitwise vs Rust scalar reference.  Mirrors engine 63d7e2d:ptx_ntt.cuh
# barrett_reduce32_ref math.  In Stage 2.5b, this bin is EXTENDED to also
# exercise mode=1 (HVX vector) and cross-validate mode=0 == mode=1.
[[bin]]
name = "sp_barrett_oracle_smoke"
path = "src/sp_barrett_oracle_smoke.rs"

# §3-HX Sprint K v0.beta Stage 2.5b — dual-dispatch + leak-free gates.
# Composes barrett_oracle(mode=1, q_idx={0,1}) with Arc<FastRpcSession>
# concurrent invoke pattern (per reference-fastrpc-concurrent-dispatch).
# Runs M_K_beta_DUAL_DISPATCH_SPEEDUP and M_K_beta_LEAK_FREE per Stage 0
# substantive-gate plan.
[[bin]]
name = "sp_barrett_dual_smoke"
path = "src/sp_barrett_dual_smoke.rs"

# §3-HX Sprint K v0.beta Stage 2.5c Stage 1 — host-runnable scalar reference
# + Garner CRT round-trip test.  Bin (not lib) to match the existing crate
# convention; runs on Windows/Linux x86 without DSP.
[[bin]]
name = "sp_matmul_q_ref_test"
path = "src/sp_matmul_q_ref_test.rs"

# §3-HX Sprint K v0.beta Stage 2.5c Stage 2 — on-device HVX mod_q matmul
# correctness + Garner CRT bit-exact smoke.
[[bin]]
name = "sp_matmul_q_smoke"
path = "src/sp_matmul_q_smoke.rs"

# §3-HX Sprint K v0.beta Stage 2.5c Stage 3 — dual-dispatch + leak-free
# harness.  Measures parallelism at TWO shapes (prompt-spec data-bound +
# compute-bound) per feedback-shape-dependent-parallelism-gates; second-half
# VmRSS slope as leak metric per feedback-leak-gate-allocator-warmup.
[[bin]]
name = "sp_matmul_q_dual_smoke"
path = "src/sp_matmul_q_dual_smoke.rs"

# Sprint NTT.0 — T_NTT0_SCALAR_BIT_EXACT smoke.  Calls math-core's
# `ntt_forward` host-side via the static-lib link in build.rs (sp_ntt_crt) as
# the oracle; compares to the cDSP-scalar sp_compute_ntt_oracle (skel
# method 12) across 6 × 100 = 600 runs.  See PLAN-NTT-0.md + CLOSURE-NTT-0.md.
[[bin]]
name = "sp_ntt_0_smoke"
path = "src/sp_ntt_0_smoke.rs"

[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"
axum       = "0.7"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
bytes      = "1"
