[package]
name = "sp-swarm"
version = "0.1.0"
edition = "2021"
description = "SP-SWARM — private content-addressed signed memory mesh over MEM-OKF (Rust port of the proven Python L1/L2/L3). L0 libp2p transport lands behind the `transport` feature."

[lib]
name = "sp_swarm"
path = "src/lib.rs"

# Standalone headless replication node (the deployable form of the daemon integration).
[[bin]]
name = "sp-swarm-node"
path = "src/bin/sp_swarm_node.rs"
required-features = ["transport"]

[dependencies]
sha2 = "0.10"            # content addressing (== Python hashlib.sha256)
ed25519-dalek = "2"      # L3 provenance (== libsodium/pynacl on the wire; RFC 8032)
hex = "0.4"

# --- L0 transport (optional; behind the `transport` feature so the core stays lean) ---
# Reuses the engine's PROVEN QUIC stack (quinn 0.11 + rustls 0.23/ring, loopback-gated in
# tools/sp_daemon/src/network) — QUIC's TLS 1.3 IS the encrypted-authenticated channel the
# SWARM doc §2 L0 calls for (X25519 / ChaCha20-Poly1305 / AES-GCM). Invite-only IDENTITY is
# an app-level Ed25519 roster handshake over that channel. NOT rust-libp2p: the engine already
# has this transport, and libp2p's DHT/gossipsub are overkill for a closed invite-only mesh.
quinn   = { version = "0.11", features = ["rustls"], optional = true }
rustls  = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rcgen   = { version = "0.13", default-features = false, features = ["ring"], optional = true }
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync"], optional = true }
getrandom = { version = "0.2", optional = true }   # handshake nonces + key seeds

[dev-dependencies]
serde_json = "1"         # read the cross-language provenance fixture in tests

[features]
default = []
transport = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio", "dep:getrandom"]
